--- a/content/themes/fedes/page-servicios.hbs
+++ b/content/themes/fedes/page-servicios.hbs
@@ -2,7 +2,7 @@
 {{#post}}
   {{! The main content area on the homepage }}
   <main id="content" class="content" role="main">
-      {{> "carousel-min"}}
+      {{> "carousel"}}
       <div class="container gallery-principal collapse in" id="gallery-fedes">
         <div>
           <h2 class="gallery-title">Servicios</h2>
