--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -1,5 +1,5 @@
 <div class="container carousel">
-  <div id="myCarousel" class="carousel-main slide {{^is "index"}} carousel-main-secondary {{/is}}" data-ride="carousel">
+  <div id="myCarousel" class="carousel slide {{^is "index"}} carousel-main-secondary {{/is}}" data-ride="carousel">
     <div class=" carousel-inner {{^is "index"}} carousel-inner-secondary {{/is}}"
       role="listbox">
       <div class="item active">
