Added text to images

--- a/content/themes/fedes/index.hbs
+++ b/content/themes/fedes/index.hbs
@@ -5,7 +5,7 @@
 <main id="content" class="content" role="main">
   {{! The tag below includes the post loop - partials/loop.hbs }}
   {{> "carousel"}}
-  <div class="container gallery-principal" id="galleryPrincipal">
+  <div class="container  gallery gallery-principal collapse" id="galleryPrincipal">
     <div>
       <h2 class="gallery-title">Proyectos</h2>
       <p class="text-center">nam ea quod aperiri eruditi.</p>
