Dividers main page.

--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -4,6 +4,7 @@
 @import "components/navbar"
 @import "components/carousel"
 @import "components/gearDivider"
+@import "components/gearDivider-inverse"
 @import "components/servicios"
 @import "components/header"
 @import "components/footer"
