--- a/content/themes/fedes/partials/footer.hbs
+++ b/content/themes/fedes/partials/footer.hbs
@@ -1,7 +1,9 @@
-<footer>
-  <div class="circleFooter">
-    <img class="ruedaGris" src="{{asset 'img/rueda_gris.png'}}" alt="rueda" width="20" height="20">
+<div class="gearDivider inverse">
+  <div>
+    <img class="ruedaGris" src="{{asset 'img/rueda_gris.png'}}">
   </div>
+</div>
+<footer>
     <h3 class="textFooter titleFooter">Contactanos</h3>
     <div class="container footerPrincipal">
       <div class="row">
@@ -71,6 +73,7 @@
         </div>
     </div>
 </footer>
+
 <nav class="navbar navbar-default carousel footer-navbar">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
