--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -2,53 +2,34 @@
   <div id="myCarousel" class="carousel slide {{^is "index"}} carousel-main-secondary {{/is}}" data-ride="carousel">
     <div class=" carousel-inner {{^is "index"}} carousel-inner-secondary {{/is}}"
       role="listbox">
-      {{#get "posts" include="tags" as |images|}}
+      {{#get "posts" filter="tag:carouselimagen" as |images|}}
         {{#foreach images}}
-          {{#has tag="carouselimagen"}}
-          {{#if @first}}
-            <div class="item active">
+            <div class="item">
               <img src="{{image}}" class="img-responsive"/>
-                <div class="menu-carousel textCarousel">
-                  <div class="carousel text text-nowrap">
-                    <h1>{{title}}</h1>
-                    <p>
-                      {{content}}
-                    </p>
-                  </div>
+              <div class="menu-carousel {{^is "index"}} menu-carousel-secondary {{/is}}">
+                <div class="carousel text text-nowrap">
+                  <h1>{{title}}</h1>
+                  <p>
+                    {{content}}
+                  </p>
+                </div>
+                <div class="carousel-controls-wrapper">
+                  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"  aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
                 </div>
               </div>
-            {{else}}
-              <div class="item">
-                <img src="{{image}}" class="img-responsive"/>
-                  <div class="menu-carousel textCarousel">
-                    <div class="carousel text text-nowrap">
-                      <h1>{{title}}</h1>
-                      <p>
-                        {{content}}
-                      </p>
-                    </div>
-                  </div>
-              </div>
-            {{/if}}
-            {{/has}}
+            </div>
         {{/foreach}}
       {{/get}}
     </div>
-    <div class="menu-carousel {{^is "index"}} menu-carousel-secondary {{/is}}">
-      <div class="carousel-controls-wrapper">
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"  aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </div>
   </div>
 </div>
-
 <section>
   {{#get "posts" slug="texto-principal" as |article|}}
     {{#article}}
