--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -12,7 +12,7 @@
     &-secondary
       margin-top: 46px
 
-    @media screen and (max-width: $mobile-width)
+    @media (max-width: $mobile-width)
       margin-top: 0px
 
   .carousel-inner
