--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -1,35 +1,54 @@
 footer
   background: $blue-dark
   padding-top: 1px
+  padding-bottom: 25px
   .textFooter
     color: #FFFFFF
+    font-weight: 200
+
   .titleFooter
     text-align: center
     padding-top: 45px
     padding-bottom: 35px
+
+  .textFormFooter
+    color: #00b09a
+    padding-bottom: 20px
+    font-size: 15px
+    font-weight: 200
+    width: 320px
+
+  .colFooter
+    .form-group
+      .form-control
+        border-radius: 0px
+        width: 320px
+    .btn-primary
+      border-radius: 0px
 
   .imgGalleryFooter
     border: 0px solid
     border-radius: 0px
     background-color: $blue-dark
     padding: 0
-    width: 50px
-    height: 50px
-    img
-      width: 100%
-      height: 100%
-
-  .textFormFooter
-    color: #00b09a
-    padding-bottom: 20px
-
-  .colFooter
-    padding-left: 73px
+    width: 25px
+    height: 25px
 
   .leyendfooter
     align : left
     color: $blue-one
-    padding-left: 73px
-    @media screen and (max-width: $mobile-width)
-      float: right
-      padding-bottom: 50px
+    padding-left: 15px
+    margin-top: 50px
+
+.footer-navbar
+  .navbar-list
+    .navbar-menuItem
+      margin-left: 50px
+
+// TODO
+// @media (max-width: $mobile-width)
+
+// @media (max-width: @screen-xs-max) { ... }
+// @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) { ... }
+// @media (min-width: @screen-md-min) and (max-width: @screen-md-max) { ... }
+// @media (min-width: @screen-lg-min) { ... }
