Basic structure for blog page

--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -6,6 +6,7 @@
 @import "components/gearDivider"
 @import "components/gearDivider-inverse"
 @import "components/servicios"
+@import "components/blog"
 @import "components/header"
 @import "components/footer"
 @import "components/gallery"
