--- a/content/themes/fedes/partials/navigation.hbs
+++ b/content/themes/fedes/partials/navigation.hbs
@@ -24,7 +24,7 @@
           <li><a class="navbar-menuItem" href="/servicios">Servicios</a></li>
           <li><a class="navbar-menuItem" href="#">Equipo</a></li>
           <li><a class="navbar-menuItem" href="#">Cooperantes</a></li>
-          <li><a class="navbar-menuItem" href="#">Blog</a></li>
+          <li><a class="navbar-menuItem" href="/blog">Blog</a></li>
           <li><a class="navbar-menuItem" href="#">Aliados</a></li>
         </ul>
       </div>
