Optimize blog categories

--- a/content/themes/fedes/partials/navigation-blog.hbs
+++ b/content/themes/fedes/partials/navigation-blog.hbs
@@ -1,12 +1,14 @@
-<ul class="nav nav-tabs">
-  <li class="active">
-    <a href="/blog">All</a>
-  </li>
-  {{#get "posts" order="created_at asc" filter="tag:blog-category" as |categories|}}
-    {{#foreach categories}}
-      <li class="active">
-        <a href="/tag/{{slug}}">{{title}}</a>
-      </li>
-    {{/foreach}}
-  {{/get}}
-</ul>
+<div class="nav-blog">
+  <ul class="nav nav-tabs">
+    <li class="active">
+      <a href="/blog/">All</a>
+    </li>
+    {{#get "posts" order="created_at asc" filter="tag:blog-category" as |categories|}}
+      {{#foreach categories}}
+        <li>
+          <a href="/tag/{{slug}}/">{{title}}</a>
+        </li>
+      {{/foreach}}
+    {{/get}}
+  </ul>
+</div>
