--- a/content/themes/fedes/page-equipo.hbs
+++ b/content/themes/fedes/page-equipo.hbs
@@ -9,25 +9,7 @@
         </div>
         <div class="row row-services">
           <section>
-            {{#get "posts" filter="tag:imagenequipo" as |images|}}
-              {{#foreach images}}
-                <div class="col-xs-12 col-sm-4">
-                  <figure class="img-gallery-services">
-                    <img src="{{image}}"
-                      class="img-responsive"
-                      alt="{{title}}"
-                      data-toggle="collapse"
-                      data-target="#service-{{@number}}"/>
-                    <div>
-                      <p>{{title}}</p>
-                    </div>
-                    <div class="collapse" id="service-{{@number}}">
-                      {{content}}
-                    </div>
-                  </figure>
-                </div>
-              {{/foreach}}
-            {{/get}}
+            {{> "carouselEquipo"}}
           </section>
         </div>
         <div>
@@ -40,7 +22,7 @@
               {{#foreach images}}
                 <div class="col-xs-12 col-sm-4">
                   <figure class="img-gallery-services">
-                    <img id="pruebaclick" src="{{image}}"
+                    <img src="{{image}}"
                       class="img-responsive"
                       alt="{{title}}"
                       data-toggle="collapse"
@@ -52,10 +34,56 @@
                 </div>
               {{/foreach}}
             </div>
-            <div class="row">
+            <div class="row contentEquipo">
                 {{#foreach images}}
-                  <div class="collapse" id="equipo-{{@number}}">
-                    {{content}}
+                  <div class="item">
+                    <div class="collapse" id="equipo-{{@number}}">
+                      <div class="col-lg-12 colFooter">
+                        <div class="col-md-6">
+                          {{content}}
+                        </div>
+                        <div class="col-md-4 formEquipo">
+                          <h5>Datos Personales</h5>
+                          <form data-toggle="validator" role="form">
+                            <div class="form-group">
+                              <input type="text" class="form-control" id="nameInput"
+                              placeholder="nombres*" required>
+                            </div>
+                            <div class="form-group">
+                              <input type="text" class="form-control" id="lastNameInput"
+                              placeholder="apellidos*" required>
+                            </div>
+                            <div class="form-group">
+                              <input type="email" class="form-control" id="emailInput" placeholder="e-mail*" required>
+                            </div>
+                            <div class="form-group">
+                              <input type="tel" class="form-control" id="telInput" placeholder="teléfono*" required>
+                            </div>
+                            <div class="form-group">
+                            <h6>género</h6>
+                             <input type="checkbox" name="genere" value="male"> masculino<br>
+                             <input type="checkbox" name="genere" value="female"> femenino<br>
+                            </div>
+                            <h5>Datos de Usuario:</h5>
+                            <div class="form-group">
+                              <input type="text" class="form-control" id="username"
+                              placeholder="nombres de usurio" required>
+                            </div>
+                            <div class="form-group">
+                              <input type="text" class="form-control" id="password"
+                              placeholder="contraseña" required>
+                            </div>
+                            <div class="form-group">
+                              <input type="text" class="form-control" id="recpassword"
+                              placeholder="confirmar contraseña" required>
+                            </div>
+                            <h6>* datos requeridos de manera obligatoria</h6>
+                            <div class="help-block with-errors"></div>
+                            <button type="submit" class="btn btn-primary">registrarse</button>
+                          </form>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 {{/foreach}}
             </div>
