--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -13,3 +13,4 @@
 @import "components/gallery"
 @import "components/navbarFooter"
 @import "components/navbarCarousel"
+@import "components/pageAliados"
