--- a/content/themes/fedes/partials/navigation.hbs
+++ b/content/themes/fedes/partials/navigation.hbs
@@ -25,7 +25,7 @@
           <li><a class="navbar-menuItem" href="/equipo">Equipo</a></li>
           <li><a class="navbar-menuItem" href="#">Cooperantes</a></li>
           <li><a class="navbar-menuItem" href="/blog">Blog</a></li>
-          <li><a class="navbar-menuItem" href="#">Aliados</a></li>
+          <li><a class="navbar-menuItem" href="/aliados">Aliados</a></li>
         </ul>
       </div>
     </div>
