--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -21,10 +21,9 @@ footer
     width: 320px
 
   .colFooter
-    .form-group
-      .form-control
-        border-radius: 0px
-        width: 320px
+    .form-group .form-control
+      border-radius: 0px
+      width: 320px
     .btn-primary
       border-radius: 0px
     @media (min-width: $mobile-width)
@@ -46,9 +45,8 @@ footer
     margin-top: 50px
 
 .footer-navbar
-  .navbar-list
-    .navbar-menuItem
-      margin-left: 50px
+  .navbar-list .navbar-menuItem
+    margin-left: 50px
 
 @media only screen and (max-width: $mobile-width)
   footer
@@ -74,10 +72,9 @@ footer
       width: 320px
 
     .colFooter
-      .form-group
-        .form-control
-          border-radius: 0px
-          width: 320px
+      .form-group .form-control
+        border-radius: 0px
+        width: 320px
       .btn-primary
         border-radius: 0px
 
@@ -96,6 +93,5 @@ footer
       margin-top: 50px
 
   .footer-navbar
-    .navbar-list
-      .navbar-menuItem
-        margin-left: 50px
+    .navbar-list .navbar-menuItem
+      margin-left: 50px
