--- a/content/themes/fedes/lib/stylesheets/components/gearDivider-inverse.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gearDivider-inverse.sass
@@ -7,12 +7,7 @@
       height: 30px
 
 @media only screen and (max-width: $mobile-width)
-  .gearDivider2
+  .gearDivider.inverse
     position: relative
     display: block
     width: 50%
-    & > div
-      background: $white
-      .ruedaGris
-        margin-top: 10px
-        height: 25px
