--- a/content/themes/fedes/partials/footer.hbs
+++ b/content/themes/fedes/partials/footer.hbs
@@ -3,75 +3,71 @@
     <img class="ruedaGris" src="{{asset 'img/rueda_gris.png'}}">
   </div>
 </div>
-<footer>
-    <h3 class="textFooter titleFooter">Contactanos</h3>
-    <div class="container footerPrincipal">
-      <div class="row">
-        <div class="col-lg-12 colFooter">
-          <div class="col-md-4">
-           <h6 class="textFormFooter">Use este formulario para enviarnos un mensaje:</h6>
-            <form data-toggle="validator" role="form">
-              <div class="form-group">
-                <input type="text" class="form-control" id="nameInput"
-                placeholder="nombre" required>
-              </div>
-              <div class="form-group">
-                <input type="email" class="form-control" id="emailInput" placeholder="e-mail" required>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" id="mensajeTextarea" rows="3" placeholder="mensaje" required ></textarea>
-              </div>
-              <div class="help-block with-errors"></div>
-              <button type="submit" class="btn btn-primary">enviar</button>
-            </form>
-          </div>
-          <div class="col-md-3">
 
-            <ul class="nav nav-pills nav-stacked">
-              {{#get "posts" slug="contactos-direccion" as |article|}}
-                {{#article}}
-                <li><h5 class="textFooter">{{title}}</h5></li>
-                  <li class="textFooter"> {{content}} </li>
-                {{/article}}
-              {{/get}}
-            </ul>
-             <ul class="nav nav-pills nav-stacked">
-               {{#get "posts" slug="contactos-fono" as |article|}}
-                 {{#article}}
-                 <li><h5 class="textFooter">{{title}}</h5></li>
-                   <li class="textFooter"> {{content}} </li>
-                 {{/article}}
-               {{/get}}
-            </ul>
+<footer>
+  <h3 class="textFooter titleFooter">Contactos</h3>
+  <div class="container footerPrincipal">
+    <div class="row colFooter">
+      <div class="col-md-5">
+        <h6 class="textFormFooter">Use este formulario para enviarnos un mensaje:</h6>
+        <form data-toggle="validator" role="form">
+          <div class="form-group">
+            <input type="text" class="form-control" id="nameInput" placeholder="nombre" required>
           </div>
-          <div class="col-md-3 col-xs-3">
-           <h6 class="textFormFooter">Siguenos en:</h6>
-           <div class="row">
-            <div class="col-md-4 col-xs-4 imgContainerFooter">
-                <a href="#" class="thumbnail imgGalleryFooter">
-                    <img src="{{asset 'img/icono_face.png'}}" alt="facebook">
-                </a>
-            </div>
-            <div class="col-md-4 col-xs-4 imgContainerFooter">
-                <a href="#" class="thumbnail imgGalleryFooter">
-                    <img src="{{asset 'img/icono_rss.png'}}" alt="rss">
-                </a>
-            </div>
-            <div class="col-md-4 col-xs-4 imgContainerFooter">
-                <a href="#" class="thumbnail imgGalleryFooter">
-                    <img src="{{asset 'img/icono_twitter.png'}}" alt="twitter">
-                </a>
-            </div>
+          <div class="form-group">
+            <input type="email" class="form-control" id="emailInput" placeholder="e-mail" required>
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" id="mensajeTextarea" rows="3" placeholder="mensaje" required ></textarea>
+          </div>
+          <div class="help-block with-errors"></div>
+          <button type="submit" class="btn btn-primary">enviar</button>
+        </form>
+      </div>
+      <div class="col-md-4">
+        <div class="directionText">
+          <ul class="nav nav-pills nav-stacked">
+            {{#get "posts" slug="contactos-direccion" as |article|}}
+              {{> "footer-section" article=article}}
+            {{/get}}
+          </ul>
+          <ul class="nav nav-pills nav-stacked">
+            {{#get "posts" slug="contactos-fono" as |article|}}
+              {{> "footer-section" article=article}}
+            {{/get}}
+          </ul>
         </div>
+      </div>
+      <div class="col-md-3">
+        <div class="redesSociales">
+          <h6 class="textFormFooter">Siguenos en:</h6>
+          <div class="row">
+            <div class="col-md-4 col-xs-2 imgContainerFooter">
+              <a href="#" class="thumbnail imgGalleryFooter">
+                <img src="{{asset 'img/icono_face.png'}}" alt="facebook">
+              </a>
+            </div>
+            <div class="col-md-4 col-xs-2 imgContainerFooter">
+              <a href="#" class="thumbnail imgGalleryFooter">
+                <img src="{{asset 'img/icono_rss.png'}}" alt="rss">
+              </a>
+            </div>
+            <div class="col-md-4 col-xs-2 imgContainerFooter">
+              <a href="#" class="thumbnail imgGalleryFooter">
+                <img src="{{asset 'img/icono_twitter.png'}}" alt="twitter">
+              </a>
+            </div>
           </div>
         </div>
       </div>
-        <div class="row">
-            <div class="col-lg-12">
-                    <h6 class="leyendfooter">Powered by noggalito</a></li>
-            </div>
-        </div>
     </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-12">
+      <h6 class="leyendfooter">Powered by noggalito</a></li>
+    </div>
+  </div>
 </footer>
 
 <nav class="navbar navbar-default carousel footer-navbar">
