Remove cooperante of navigation

--- a/content/themes/fedes/partials/footer.hbs
+++ b/content/themes/fedes/partials/footer.hbs
@@ -77,9 +77,8 @@
       <ul class="nav navbar-nav carousel navbar-list">
         <li><a class="navbar-menuItem" href="/servicios">Servicios</a></li>
         <li><a class="navbar-menuItem" href="#">Equipo</a></li>
-        <li><a class="navbar-menuItem" href="#">Cooperantes</a></li>
-        <li><a class="navbar-menuItem" href="#">Blog</a></li>
-        <li><a class="navbar-menuItem" href="#">Aliados</a></li>
+        <li><a class="navbar-menuItem" href="/blog">Blog</a></li>
+        <li><a class="navbar-menuItem" href="/aliados">Aliados</a></li>
       </ul>
     </div>
   </div>
