--- a/content/themes/fedes/partials/navigation.hbs
+++ b/content/themes/fedes/partials/navigation.hbs
@@ -22,8 +22,7 @@
         <div class="triangle-topright"></div>
         <ul class="nav navbar-nav navbar-list">
           <li><a class="navbar-menuItem" href="/servicios">Servicios</a></li>
-          <li><a class="navbar-menuItem" href="/equipo">Equipo</a></li>
-          <li><a class="navbar-menuItem" href="#">Cooperantes</a></li>
+          <li><a class="navbar-menuItem" href="#">Equipo</a></li>
           <li><a class="navbar-menuItem" href="/blog">Blog</a></li>
           <li><a class="navbar-menuItem" href="/aliados">Aliados</a></li>
         </ul>
