--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -9,6 +9,7 @@
 @import "components/blog"
 @import "components/header"
 @import "components/footer"
+@import "components/proyectos"
 @import "components/gallery"
 @import "components/navbarFooter"
 @import "components/navbarCarousel"
