--- a/content/themes/fedes/lib/stylesheets/components/variables.sass
+++ b/content/themes/fedes/lib/stylesheets/components/variables.sass
@@ -11,3 +11,5 @@ $blue-one: #00cfff
 $blue-dark: #003c71
 $white: #FFFFFF
 $blue-transparent: #002d54
+$grey: #5b5b5b
+$blue-opacity: rgba(0, 60, 113, 0.7)
