--- a/content/themes/fedes/lib/stylesheets/components/blog.sass
+++ b/content/themes/fedes/lib/stylesheets/components/blog.sass
@@ -7,3 +7,7 @@
     margin-top: 10px
     .carousel-footer-secondary
       height: 50px
+.blog-content
+  .blog-post-link
+    text-decoration: none
+    color: #000
