--- a/content/themes/fedes/page-aliados.hbs
+++ b/content/themes/fedes/page-aliados.hbs
@@ -7,7 +7,7 @@
         <div>
           <h2 class="gallery-title">Aliados</h2>
         </div>
-        <div class = "skipMobil">
+        <div class = "hidden-xs">
           <div class="row row-services">
             <section>
               {{#get "posts" filter="tag:aliadosfedes" as |services|}}
