--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -7,13 +7,13 @@
             <div class="item">
               <img src="{{image}}" class="img-responsive"/>
               <div class="menu-carousel {{^is "index"}} menu-carousel-secondary {{/is}}">
-                <div class="carousel text text-nowrap">
+                <div class="carousel text text-nowrap {{^is "index"}} text-nowrap-secondary {{/is}}">
                   <h1>{{title}}</h1>
                   <p>
                     {{content}}
                   </p>
                 </div>
-                <div class="carousel-controls-wrapper">
+                <div class="carousel-controls-wrapper {{^is "index"}} carousel-controls-wrapper-secondary {{/is}}">
                   <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
