Add moment-date helper

--- a/content/themes/fedes/post.hbs
+++ b/content/themes/fedes/post.hbs
@@ -15,7 +15,7 @@
               class="img-responsive"
               alt="{{title}}"/>
             <div>
-              Por: {{author}}, {{date published_at format="D [de] MMMM, YYYY" locale="es"}}
+              Por: {{author}}, {{moment-date published_at format="D [de] MMMM, YYYY" locale="es"}}
             </div>
             <div>
               {{content}}
