--- a/content/themes/fedes/page-blog.hbs
+++ b/content/themes/fedes/page-blog.hbs
@@ -15,7 +15,7 @@
               <a href="{{url}}" class="blog-post-link">
                 <figure>
                   <div>
-                    {{date published_at format="D [de] MMMM, YYYY" locale="es"}}
+                    {{moment-date published_at format="D [de] MMMM, YYYY" locale="es"}}
                   </div>
                   <img src="{{image}}"
                     class="img-responsive"
