Add section 'blog categories'

--- a/content/themes/fedes/partials/navigation-blog.hbs
+++ b/content/themes/fedes/partials/navigation-blog.hbs
@@ -1,5 +1,5 @@
 <div class="nav-blog">
-  <ul class="nav nav-tabs">
+  <ul class="nav {{#is "post"}} nav-pills nav-stacked {{else}} nav-tabs {{/is}}">
     <li class="active">
       <a href="/blog/">All</a>
     </li>
