--- a/content/themes/fedes/post.hbs
+++ b/content/themes/fedes/post.hbs
@@ -6,7 +6,7 @@
   <main id="content" class="content blog-content" role="main">
     <div class="row">
       <section>
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-sm-8">
           <figure>
             <div>
               <h1>{{title}}</h1>
@@ -21,6 +21,17 @@
               {{content}}
             </div>
           </figure>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <div class="col-xs-12">
+            <h2>Categorias</h2>
+            <div>
+              {{> "navigation-blog"}}
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <h2>Otros Posts</h2>
+          </div>
         </div>
       </section>
     </div>
