--- a/content/themes/fedes/tag.hbs
+++ b/content/themes/fedes/tag.hbs
@@ -7,22 +7,24 @@
     {{> "navigation-blog"}}
   </div>
 {{/tag}}
-<main id="content" class="content" role="main">
+<main id="content" class="content blog-content" role="main">
   <div class="row">
     <section>
       {{#foreach posts}}
         <div class="col-xs-12 col-sm-4">
-          <figure>
-            <img src="{{image}}"
-              class="img-responsive"
-              alt="{{title}}"/>
-            <div>
-              <p>{{title}}</p>
-            </div>
-            <div>
-              {{content}}
-            </div>
-          </figure>
+          <a href="{{url}}" class="blog-post-link">
+            <figure>
+              <img src="{{image}}"
+                class="img-responsive"
+                alt="{{title}}"/>
+              <div>
+                <p>{{title}}</p>
+              </div>
+              <div>
+                {{content}}
+              </div>
+            </figure>
+          </a>
         </div>
       {{/foreach}}
     </section>
