Use ghost navigation

--- a/content/themes/fedes/lib/stylesheets/components/navbarCarousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarCarousel.sass
@@ -16,6 +16,8 @@
       color: #FFFFFF
       &:hover
         color: #00cfff
+    .nav-current
+      color: #00cfff
 
   .triangle-topright
     width: 25
