--- a/content/themes/fedes/partials/navigation.hbs
+++ b/content/themes/fedes/partials/navigation.hbs
@@ -21,10 +21,13 @@
         <div class="triangle-topleft"></div>
         <div class="triangle-topright"></div>
         <ul class="nav navbar-nav navbar-list">
-          <li><a class="navbar-menuItem" href="/servicios">Servicios</a></li>
-          <li><a class="navbar-menuItem" href="#">Equipo</a></li>
-          <li><a class="navbar-menuItem" href="/blog">Blog</a></li>
-          <li><a class="navbar-menuItem" href="/aliados">Aliados</a></li>
+          {{#foreach navigation}}
+            <li>
+              <a class="navbar-menuItem {{#if current}} nav-current {{/if}}" href="{{url absolute="true"}}">
+                {{label}}
+              </a>
+            </li>
+          {{/foreach}}
         </ul>
       </div>
     </div>
