Hide (inicio) of navbar carousel

--- a/content/themes/fedes/partials/navigation.hbs
+++ b/content/themes/fedes/partials/navigation.hbs
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="main-navbar-collapse">
         <div class="triangle-topleft"></div>
         <div class="triangle-topright"></div>
-        <ul class="nav navbar-nav navbar-list">
+        <ul class="nav navbar-nav navbar-list navbar-carousel">
           {{#foreach navigation}}
             <li>
               <a class="navbar-menuItem {{#if current}} nav-current {{/if}}" href="{{url absolute="true"}}">
