Blog single page

--- a/content/themes/fedes/post.hbs
+++ b/content/themes/fedes/post.hbs
@@ -4,36 +4,64 @@
     {{> "carousel-footer"}}
   </div>
   <main id="content" class="content blog-content" role="main">
-    <div class="row">
-      <section>
-        <div class="col-xs-12 col-sm-8">
-          <figure>
-            <div>
-              <h1>{{title}}</h1>
+    <div class="container">
+      <div class="row">
+        <section class="">
+          <div>
+            <ol class="breadcrumb">
+              <li>
+                <a href="/blog/">Blog</a>
+              </li>
+              <li class="active">
+                {{tags from='2' autolink='false'}}
+              </li>
+            </ol>
+          </div>
+        </section>
+      </div>
+      <div class="row">
+        <section>
+          <div class="col-xs-12 col-sm-8">
+            <figure>
+              <div>
+                <h1>{{title}}</h1>
+              </div>
+              <img src="{{image}}"
+                class="img-responsive"
+                alt="{{title}}"/>
+              <div>
+                Por: {{author}}, {{moment-date published_at format="D [de] MMMM, YYYY" locale="es"}}
+              </div>
+              <div>
+                {{content}}
+              </div>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <div class="col-xs-12">
+              <h2>Categorias</h2>
+              <div>
+                {{> "navigation-blog"}}
+              </div>
             </div>
-            <img src="{{image}}"
-              class="img-responsive"
-              alt="{{title}}"/>
-            <div>
-              Por: {{author}}, {{moment-date published_at format="D [de] MMMM, YYYY" locale="es"}}
-            </div>
-            <div>
-              {{content}}
-            </div>
-          </figure>
-        </div>
-        <div class="col-xs-12 col-sm-4">
-          <div class="col-xs-12">
-            <h2>Categorias</h2>
-            <div>
-              {{> "navigation-blog"}}
+            <div class="col-xs-12">
+              <h2>Otros Posts</h2>
+
+              {{#get "posts" limit="4" include="tags" filter="tag:blog" as |posts|}}
+                {{#foreach posts}}
+                  <div>
+                    <a href="{{url}}">
+                      <div>
+                        {{title}}
+                      </div>
+                    </a>
+                  </div>
+                {{/foreach}}
+              {{/get}}
             </div>
           </div>
-          <div class="col-xs-12">
-            <h2>Otros Posts</h2>
-          </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </div>
   </main>
 {{/post}}
