--- a/content/themes/fedes/page-blog.hbs
+++ b/content/themes/fedes/page-blog.hbs
@@ -3,35 +3,37 @@
   <div class="blog-header">
     {{> "carousel-footer"}}
   </div>
-  <div>
+  <div class="container">
     {{> "navigation-blog"}}
   </div>
   <main id="content" class="content blog-content" role="main">
-    <div class="row">
-      <section>
-        {{#get "posts" limit="all" filter="tag:blog" as |posts|}}
-          {{#foreach posts}}
-            <div class="col-xs-12 col-sm-4">
-              <a href="{{url}}" class="blog-post-link">
-                <figure>
-                  <div>
-                    {{moment-date published_at format="D [de] MMMM, YYYY" locale="es"}}
-                  </div>
-                  <img src="{{image}}"
-                    class="img-responsive"
-                    alt="{{title}}"/>
-                  <div>
-                    <p>{{title}}</p>
-                  </div>
-                  <div>
-                    {{excerpt}}
-                  </div>
-                </figure>
-              </a>
-            </div>
-          {{/foreach}}
-        {{/get}}
-      </section>
+    <div class="container">
+      <div class="row">
+        <section>
+          {{#get "posts" limit="all" filter="tag:blog" as |posts|}}
+            {{#foreach posts}}
+              <div class="col-xs-12 col-sm-4">
+                <a href="{{url}}" class="blog-post-link">
+                  <figure>
+                    <div>
+                      {{moment-date published_at format="D [de] MMMM, YYYY" locale="es"}}
+                    </div>
+                    <img src="{{image}}"
+                      class="img-responsive"
+                      alt="{{title}}"/>
+                    <div>
+                      <p>{{title}}</p>
+                    </div>
+                    <div>
+                      {{excerpt}}
+                    </div>
+                  </figure>
+                </a>
+              </div>
+            {{/foreach}}
+          {{/get}}
+        </section>
+      </div>
     </div>
   </main>
 {{/post}}
