Configure navbar Principal

--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -13,4 +13,5 @@
 @import "components/gallery"
 @import "components/navbarFooter"
 @import "components/navbarCarousel"
+@import "components/navbarPricipal"
 @import "components/pageAliados"
