--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -6,14 +6,20 @@
   width: 100%
   position: relative
 
+  .carousel.slide
+    padding-top: 46px
+
   .carousel-main
     margin-top: 1.9em
 
     &-secondary
-      margin-top: 46px
+      margin-top: 1px
 
     @media (max-width: $mobile-width)
       margin-top: 0px
+
+  .carouselNavbar
+    padding-top: 46px
 
   .carousel-inner
     .item
