--- a/content/themes/fedes/partials/navigation.hbs
+++ b/content/themes/fedes/partials/navigation.hbs
@@ -1,35 +1,3 @@
-<header class="main-header">
-  <a class="logo-fedes" href="/">
-    <img src="{{ @blog.logo }}" class="img-responsive">
-  </a>
-  <nav class="navbar navbar-default main-navbar">
-    <div class="container-fluid">
-      <div class="navbar-header main-navbar-header">
-        <button type="button"
-          class="navbar-toggle collapsed main-navbar-button"
-          data-toggle="collapse"
-          data-target="#main-navbar-collapse"
-          aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-
-      <div class="collapse navbar-collapse" id="main-navbar-collapse">
-        <div class="triangle-topleft"></div>
-        <div class="triangle-topright"></div>
-        <ul class="nav navbar-nav navbar-list navbar-carousel">
-          {{#foreach navigation}}
-            <li>
-              <a class="navbar-menuItem {{#if current}} nav-current {{/if}}" href="{{url absolute="true"}}">
-                {{label}}
-              </a>
-            </li>
-          {{/foreach}}
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
+{{#foreach navigation}}
+  <li class="{{#if current}} nav-current{{/if}}"><a href="{{url absolute="true"}}">{{label}}</a></li>
+{{/foreach}}
