--- a/content/themes/fedes/default.hbs
+++ b/content/themes/fedes/default.hbs
@@ -12,7 +12,7 @@
 
   <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
   <link rel="stylesheet" href="{{asset 'css/application.css'}}">
-  {{> "navigationPrincipal"}}
+  {{> "menuSuperior"}}
   {{ghost_head}}
 </head>
 <body class="{{body_class}}">
