--- a/content/themes/fedes/partials/navigationCarousel.hbs
+++ b/content/themes/fedes/partials/navigationCarousel.hbs
@@ -21,6 +21,9 @@
         <div class="triangle-topleft"></div>
         <div class="triangle-topright"></div>
         <ul class="nav navbar-nav navbar-list navbar-carousel">
+          <li><a class="navbar-menuItem" href="/">Inicio</a></li>
+          <li><a class="navbar-menuItem" href="#">Contactos</a></li>
+          <li><a class="navbar-menuItem" href="#">English</a></li>
           {{navigation}}
         </ul>
       </div>
