--- a/content/themes/fedes/lib/stylesheets/components/variables.sass
+++ b/content/themes/fedes/lib/stylesheets/components/variables.sass
@@ -12,5 +12,7 @@ $blue-dark: #003c71
 $white: #FFFFFF
 $blue-transparent: #002d54
 $grey: #5b5b5b
+$light-grey: #f2f2f2
+$medium-grey: #ebeaed
 $dark-gray: #e6e6e6
 $blue-opacity: rgba(0, 60, 113, 0.7)
