--- a/content/themes/fedes/post.hbs
+++ b/content/themes/fedes/post.hbs
@@ -10,7 +10,7 @@
           <div>
             <ol class="breadcrumb">
               <li>
-                <a href="/blog/">Blog</a>
+                <a href="/tag/blog/">Blog</a>
               </li>
               <li class="active">
                 {{tags from='2' autolink='false'}}
