--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -15,3 +15,4 @@
 @import "components/navbarCarousel"
 @import "components/navbarPricipal"
 @import "components/pageAliados"
+@import "components/pageContactos"
