--- a/content/themes/fedes/partials/menuSuperior.hbs
+++ b/content/themes/fedes/partials/menuSuperior.hbs
@@ -4,7 +4,7 @@
       <div class="container-fluid">
         <ul class="nav navbar-nav listHeader">
           <li><a class="navbar-menuItem" href="/">Inicio</a></li>
-          <li><a class="navbar-menuItem" href="#">Contactos</a></li>
+          <li><a class="navbar-menuItem" href="/contactos">Contactos</a></li>
           <li><a class="navbar-menuItem" href="#">English</a></li>
         </ul>
       </div>
