Add seed for page contactos

--- a/content/themes/fedes/partials/navigationCarousel.hbs
+++ b/content/themes/fedes/partials/navigationCarousel.hbs
@@ -22,7 +22,7 @@
         <div class="triangle-topright"></div>
         <ul class="nav navbar-nav navbar-list navbar-carousel">
           <li><a class="navbar-menuItem" href="/">Inicio</a></li>
-          <li><a class="navbar-menuItem" href="#">Contactos</a></li>
+          <li><a class="navbar-menuItem" href="/contactos">Contactos</a></li>
           <li><a class="navbar-menuItem" href="#">English</a></li>
           {{navigation}}
         </ul>
