fix mobile main nabber button

--- a/content/themes/fedes/lib/stylesheets/components/header.sass
+++ b/content/themes/fedes/lib/stylesheets/components/header.sass
@@ -10,3 +10,7 @@
       @media screen and (max-width: $mobile-width)
         margin-left: auto
         width: 40%
+
+  @media (max-width: $mobile-width)
+    .main-navbar-header .main-navbar-button
+      margin-top: -2px
