--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -23,7 +23,12 @@
 
   .carousel-inner
     .item
-      max-height: 800px
+      height: 60vh
+      .img-responsive
+        height: 100%
+        background-size: cover
+        background-position: 50%
+
     &-secondary
       max-height: 160px
   .menu-carousel
@@ -50,6 +55,7 @@
       margin-right: 15%
       white-space: normal
       position: relative
+      overflow: hidden
       h1
         font-size: 3.3vw
         font-weight: bold
@@ -61,6 +67,7 @@
         opacity: 1
         margin: 0
         color: #fff
+        text-align: justify
 
     .left.carousel-control
       opacity: 1
@@ -93,12 +100,13 @@
       margin-bottom: 0
       font-weight: 200
 
-@media only screen and (max-width: $mobile-width)
+@media (max-width: $mobile-width)
   .container.carousel
     .menu-carousel
       position: absolute
       height: 275px
       width: 80%
+      height: 80%
       margin-left: 45px
       background-color: #002d54
 
@@ -110,8 +118,14 @@
 
       .carousel.text
         text-align: left
-        margin: 10px 20px
+        padding: 2% 5%
+        margin: 0
+        height: 100%
+        .content-wrapper
+          max-height: 60%
+          overflow: hidden
         h1
+          margin-top: 5%
           font-size: 30px
           color: #ffffff
           opacity: 1
@@ -121,12 +135,13 @@
         p
           font-size: 15px
           opacity: 1
+          box-sizing: content-box // try to fix text cutting in half
 
       .carousel-controls-wrapper
         position: absolute
         display: block
         width: 100%
-        height: 70px
+        height: 20%
         text-align: center
         margin-top: -30px
         bottom: 0
