--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -5,13 +5,15 @@
       {{#get "posts" filter="tag:carouselimagen" as |images|}}
         {{#foreach images}}
             <div class="item">
-              <img src="{{image}}" class="img-responsive"/>
+              <div style="background-image: url('{{image}}')" class="img-responsive"></div>
               <div class="menu-carousel {{^is "index"}} menu-carousel-secondary {{/is}}">
                 <div class="carousel text text-nowrap {{^is "index"}} text-nowrap-secondary {{/is}}">
                   <h1>{{title}}</h1>
-                  <p>
-                    {{content}}
-                  </p>
+                  <div class="content-wrapper">
+                    <p>
+                      {{content}}
+                    </p>
+                  </div>
                 </div>
                 <div class="carousel-controls-wrapper {{^is "index"}} carousel-controls-wrapper-secondary {{/is}}">
                   <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
